<resources>
    <string name="app_name">Nevz</string>
    <string name="logo_name">logo</string>
    <string name="recommendations_button">Советы</string>
    <string name="calendar_button">Календарь</string>
    <string name="tool_button">Измерительный инструмент</string>
    <string name="salary_button">Отчет по зарплате</string>
    <string name="production_button">Выработка</string>
    <string name="main_page">Главное меню</string>
    <string name="AddDay">Добаваить день</string>
    <string name="AddTask">добваить сопроводной</string>
    <string name="registration">Регистрация</string>
    <string name="user_ID">(ID)Табельны</string>
    <string name="user_surName">Фамилия</string>
    <string name="press_button">Пресование</string>
    <string name="lethe_button">Токарение</string>
    <string name="add_db">Добавить</string>
    <string name="date_text">Дата:</string>
    <string name="count_text">Количесвто:</string>
    <string name="type_text">Тип:</string>
    <string name="product_text">Изделие:</string>
    <string name="create_text">Вывести</string>
    <string name="rai_coff">Районный коэффицент</string>
    <string name="pay_for_production">Оплата по производственным нарядам</string>
    <string name="personal_income_tax">НДФЛ</string>
    <string name="pay_salary">К выплате</string>
    <string-array name="month">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>
</resources>