<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SalaryActivity">

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="@+id/createReceipt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/createReceipt"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <TextView
            android:id="@+id/tax_text"
            android:layout_width="273dp"
            android:layout_height="61dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/personal_income_tax"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/count_tax"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="@+id/createReceipt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/createReceipt"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2">

        <TextView
            android:id="@+id/text_coficent"
            android:layout_width="273dp"
            android:layout_height="61dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/rai_coff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_count_cofficent"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp" />

    </TableRow>

    <Button
        android:id="@+id/createReceipt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="#0C54A0"
        android:onClick="onClick"
        android:text="@string/create_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/main_menu_button2"
        app:layout_constraintTop_toBottomOf="@+id/spinner_month" />

    <Button
        android:id="@+id/main_menu_button2"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat"
        android:onClick="onClick"
        android:text="@string/main_page"
        android:textSize="16sp"
        app:backgroundTint="#0C54A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_year"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_button2" />

    <Spinner
        android:id="@+id/spinner_month"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_year"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_button2" />

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="@+id/createReceipt"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/createReceipt"
        app:layout_constraintTop_toBottomOf="@+id/createReceipt">

        <TextView
            android:id="@+id/textReceipt1"
            android:layout_width="273dp"
            android:layout_height="61dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/pay_for_production"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_count_prod"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp" />

    </TableRow>

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="@+id/createReceipt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/createReceipt"
        app:layout_constraintTop_toBottomOf="@+id/tableRow3">

        <TextView
            android:id="@+id/sum_text"
            android:layout_width="273dp"
            android:layout_height="61dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/pay_salary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/count_sum"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="18sp" />

    </TableRow>


</androidx.constraintlayout.widget.ConstraintLayout>