<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductionDayActivity">


    <Button
        android:id="@+id/task_add_button"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:onClick="onClick"
        android:text="@string/AddTask"
        android:textSize="12sp"
        app:backgroundTint="#0C54A0"
        app:layout_constraintStart_toEndOf="@+id/production_button2"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_button" />

    <Button
        android:id="@+id/main_menu_button"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat"
        android:onClick="onClick"
        android:text="@string/main_page"
        android:textSize="16sp"
        app:backgroundTint="#0C54A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/production_button2"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:fontFamily="@font/montserrat"
        android:text="@string/AddDay"
        android:textSize="12sp"
        app:backgroundTint="#D1D1D1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_button" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/production_button2" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

</androidx.constraintlayout.widget.ConstraintLayout>